<resources>
    <string name="app_name">mercatero</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_auth">AuthActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Entry Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for image description -->
    <string name="logo_description">Logo de mercatero</string>

    <!-- Strings used for signIn screen -->
    <string name="login_statement">Inicia sesión</string>
    <string name="login_email_statement">Correo</string>
    <string name="login_password_statement">Contraseña</string>
    <string name="login_forget_password_statement">¿Olvidaste tu contraseña?</string>
    <string name="login_final_statement">O continuar con</string>
    <string name="login_create_account_statement">¿No tienes cuenta? Crear cuenta</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_google">Google</string>
    <string name="error_text_field">El correo o contraseña es incorrecto</string>
    <string name="error_empty_field">Campo vacío</string>
    <string name="singin_message">Iniciando sesión...</string>

    <!-- Strings used for signUpType screen -->
    <string name="signIn_statement">Registrarse como:</string>
    <string name="signIn_statement_client">Cliente</string>
    <string name="signIn_statement_deliver">Repartidor</string>
    <string name="signIn_statement_shop">Tienda</string>
    <string name="signIn_next_button">Siguiente</string>

    <!-- Strings used for signUp screen -->
    <string name="signUp_statement">Regístrate</string>
    <string name="signUp_account_statement">¿Ya tienes una cuenta?</string>
    <string name="signUp_name_input">Nombres</string>
    <string name="signUp_last_name_input">Apellidos</string>
    <string name="signUp_number_phone">Número de celular</string>
    <string name="signUp_error_email">Correo electrónico en uso</string>
    <string name="singUp_invalid_email">Formato incorrecto</string>

    <!-- Strings used for signUpPassword screen -->
    <string name="set_password_statement">Establece tu contraseña</string>
    <string name="set_password_warning">La contraseña debe incluir letras y números y debe ser igual o mayor a 8 caraceres.</string>
    <string name="password_statement">Contraseña</string>
    <string name="password_confirm_statement">Confirmar contraseña</string>
    <string name="privacy_conditions">Estoy de acuerdo con la política de privacidad y el uso de los datos solicitados.</string>
    <string name="email_allows">Envíame correos sobre ofertas especiales.</string>
    <string name="create_account_statement">Crear cuenta</string>
    <string name="error_password_differents">Las contraseñas no corresponden.</string>
    <string name="singup_message">Creando cuenta...</string>

    <!-- Strings used for signUpShop screen -->
    <string name="signup_shop_statement">¡Comienza aquí!</string>
    <string name="signup_shop_name">Nombre de la tienda o restaurante</string>
    <string name="signup_shop_address">Dirección del establecimiento</string>
    <string name="signup_shop_email">Correo electrónico del sueño</string>
    <string name="signup_shop_phone">Número de celular</string>
    <string name="signup_shop_privacy">Al continuar, acepto que Mercatero entre en contacto conmigo por mail o teléfono (incluyendo mensajes automáticos para fines comerciales)</string>

    <!-- Strings used for home navigation bar -->
    <string name="navigaton_home">Incio</string>
    <string name="navigation_orders">Pedidos</string>
    <string name="navigation_favorites">Favoritos</string>
    <string name="navigation_profile">Perfil</string>

    <!-- Strings used for client home -->
    <string name="welcome_message">¡Hola, </string>
    <string name="home_search_hint">¿Qué estás buscando?</string>
    <string name="home_popular_shops">Tiendas más populares</string>
    <string name="home_popular_products">Lo más comprado</string>
    <string name="show_more_statement">Ver más</string>

    <!-- Strings used for myprofile screen -->
    <string name="my_profile_statement">Mi perfil</string>
    <string name="about_me">Sobre mí</string>
    <string name="addresses">Mis direcciones</string>
    <string name="pay_methods">Mis métodos de pago</string>
    <string name="settings">Ajustes</string>
    <string name="sign_off">Cerrar sesión</string>

    <!-- Strings user for my shop screen -->
    <string name="my_shop_statement">Mi tienda</string>

    <!-- Strings used for shopHome screen -->
    <string name="to_be_accepted">Por aceptar</string>
    <string name="in_preparation">En preparación</string>
    <string name="to_deliver">Por entregar</string>
    <string name="order_card_title">Pedido | </string>
    <string name="order_card_items">Productos: </string>
    <string name="order_total_price">Total: $</string>
    <string name="add_product_empty">No tienes ningún menú creado hasta el momento</string>
    <string name="add_product_fill">¡Estos son todos tus productos!</string>

    <!-- Strings used for ProductView screen -->
    <string name="add_to_cart">Agregar al carrito</string>
    <string name="name_of_product">Nombre: </string>
    <string name="description_of_product">Descripción: </string>
    <string name="price_of_product">Precio: </string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>

</resources>