<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:title="@string/navigaton_home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/navigation_orders"
        android:title="@string/navigation_orders"
        android:icon="@drawable/ic_orders"
        android:iconTint="@color/primary"/>

    <item
        android:id="@+id/navigation_favorites"
        android:title="@string/navigation_favorites"
        android:icon="@drawable/ic_favorites"
        android:iconTint="@color/primary"/>

    <item
        android:id="@+id/navigation_profile"
        android:title="@string/navigation_profile"
        android:icon="@drawable/ic_user"
        android:iconTint="@color/primary"/>
</menu>
