<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authentication.SignUpPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/set_password_statement"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/set_password_warning"
            android:textSize="12sp"
            android:textStyle="normal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border_edit_text_rectangle"
            app:startIconDrawable="@drawable/pad_lock"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_statement"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border_edit_text_rectangle"
            app:startIconDrawable="@drawable/pad_lock"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm_statement"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/privacy_conditions"
            android:layout_marginTop="20dp"/>

        <CheckBox
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/email_allows"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:text="@string/create_account_statement"
            android:background="@drawable/login_button"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:textAllCaps="false"
            android:textSize="16sp"/>

    </LinearLayout>


</FrameLayout>