<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authentication.SignUpShopFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_shop_statement"
            android:textSize="25sp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="50dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/border_edit_text_rectangle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/signup_shop_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressTextInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/border_edit_text_rectangle"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/signup_shop_address"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/border_edit_text_rectangle"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/signup_shop_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneTextInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_edit_text_rectangle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/signup_shop_phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/signup_shop_privacy"
            android:textSize="12sp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/signUpNextButton"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:text="@string/signIn_next_button"
            android:background="@drawable/login_button"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:textAllCaps="false"
            android:textSize="16sp"/>

    </LinearLayout>

</FrameLayout>