<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authentication.AuthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@drawable/background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans"
                android:text="@string/login_statement"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/email_icon"
                app:startIconTint="@color/primary"
                android:layout_margin="5dp"
                android:background="@drawable/border_edit_text_rectangle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_statement" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/pad_lock"
                app:startIconTint="@color/primary"
                android:background="@drawable/border_edit_text_rectangle"
                android:layout_margin="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_statement" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans"
                android:text="@string/login_forget_password_statement"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_final_statement"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <Button
                    android:layout_width="130dp"
                    android:layout_height="55dp"
                    android:background="@drawable/shadow_rectangle"
                    android:drawableLeft="@drawable/facebook_logo"
                    android:text="@string/login_facebook"
                    android:textColor="@color/black"
                    android:layout_marginRight="20dp"/>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="130dp"
                    android:layout_height="55dp"
                    android:background="@drawable/shadow_rectangle"
                    android:drawableLeft="@drawable/google_logo"
                    android:text="@string/login_google"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="160dp"
                android:layout_height="55dp"
                android:text="@string/login_statement"
                android:background="@drawable/login_button"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:textAllCaps="false"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_create_account_statement"
                android:textAlignment="center"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>