<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authentication.SignUpFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/back_button"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text=" "/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sans"
            android:text="@string/signIn_statement"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="90dp"/>


        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/sign_up_type_button_background"
            android:drawableLeft="@drawable/person_icon"
            android:drawableTint="@color/text_button_dark"
            android:drawablePadding="5dp"
            android:fontFamily="@font/sans"
            android:gravity="center_vertical"
            android:text="@string/signIn_statement_client"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_button_dark"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_up_type_button_background"
            android:drawableLeft="@drawable/deliver_icon"
            android:drawableTint="@color/text_button_dark"
            android:drawablePadding="5dp"
            android:fontFamily="@font/sans"
            android:text="@string/signIn_statement_deliver"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:textColor="@color/text_button_dark"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_up_type_button_background"
            android:drawableLeft="@drawable/shop_icon"
            android:drawableTint="@color/text_button_dark"
            android:drawablePadding="5dp"
            android:fontFamily="@font/sans"
            android:text="@string/signIn_statement_shop"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:textColor="@color/text_button_dark"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</FrameLayout>